src/test/ui/parser/recover-struct.stderr
error: expected `:`, found `Bad`
  --> $DIR/recover-struct.rs:4:9
   |
LL |         Very
   |             - expected `:`
LL |         Bad
   |         ^^^ unexpected token

error: aborting due to previous error

